--- a/index.html
+++ b/index.html
@@ -8,6 +8,60 @@
     <title>Acme Web Design | Welcome</title>
 </head>
 <body>
-    
+    <header>
+        <div class="container">
+        <div id="branding">
+            <h1>Acme Web Design</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="services.html">Services</a></li>
+            </ul>
+        </nav>
+        </div>
+    </header>
+
+    <section id="showcase">
+        <div class="container">
+            <h1>Affordable Professional Web Design</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut expedita repellendus, odit ea sed laudantium!</p>
+        </div>
+    </section>
+
+    <section id="newsletter">
+        <div class="container">
+            <h1>Subscribe to our Newsletter</h1>
+            <form>
+                <input type="email" placeholder="Enter Email">
+                <button class="btn" type="submit">Subscribe</button>
+            </form>
+        </div>    
+    </section>
+
+    <section id="boxes">
+        <div class="container">
+            <div class="box">
+                <img src="assets/img/html.png" alt="HTML5">
+                <h3>HTML5 Markup</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nihil, vel.</p>
+            </div>
+            <div class="box">
+                <img src="assets/img/css.png" alt="CSS3">
+                <h3>CSS3 Styling</h3>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sapiente, nesciunt?</p>
+            </div>
+            <div class="box">
+                <img src="assets/img/js.png" alt="JS">
+                <h3>Javascript</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Numquam, harum!</p>
+            </div>
+        </div>
+    </section>
+
+    <footer>
+        <p>Acme Web Design Copyright &copy; 2017</p>
+    </footer>
 </body>
 </html>
