Styling Complete: About Page

--- a/about.html
+++ b/about.html
@@ -38,12 +38,14 @@
             <article id="main-col">
                 <h1 class="page-title">About Us</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempora eligendi, fugit quia sequi expedita rerum laboriosam eius iusto enim debitis ipsum porro neque recusandae. Aspernatur, temporibus, suscipit. Quas, ducimus, explicabo. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Harum laborum nihil, laudantium architecto voluptas velit illo facilis magni. Quis, reiciendis.</p>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptatem non dicta, quas quia consectetur repellat facere odit magnam eligendi iste dolore provident corporis sit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis impedit veritatis quaerat sequi delectus corporis, sed laudantium nisi nihil assumenda. Odit doloribus laboriosam similique sapiente modi laborum consequuntur, est nisi.</p>
+                <p class="dark">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maxime voluptatem non dicta, quas quia consectetur repellat facere odit magnam eligendi iste dolore provident corporis sit! Lorem ipsum dolor sit amet, consectetur adipisicing elit. Debitis impedit veritatis quaerat sequi delectus corporis, sed laudantium nisi nihil assumenda. Odit doloribus laboriosam similique sapiente modi laborum consequuntur, est nisi.</p>
             </article>
 
             <aside id="sidebar">
-                <h3>What we do</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur facilis nam quod excepturi, voluptas. Sapiente illum quas distinctio optio atque?</p>
+                <div class="dark">
+                    <h3>What we do</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Consectetur facilis nam quod excepturi, voluptas. Sapiente illum quas distinctio optio atque? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatem veniam, commodi quidem esse, nemo dolore delectus quasi veritatis eum optio.</p>
+                </div>
             </aside>
         </div>
     </section>
